# AloeVera

./: Cargo.toml
.gitea/workflows/: build_and_test.yml
crates/arch/src/: idt64.rs  lib.rs  supports.rs
crates/boolvec/: Cargo.toml
crates/boolvec/benches/: benchmark.rs
crates/boolvec/src/: bitarray.rs  compressedbool.rs  lib.rs
crates/mem2/: Cargo.toml
crates/mem2/src/: addr.rs  lib.rs  phys.rs
crates/mem2/src/phys/: map.rs
crates/ultraviolet/: Cargo.toml
crates/ultraviolet/src/: constvec.rs  lib.rs
kernel/src/: context.rs
kernel/src/process/: task.rs
meta/src/: cmdline.rs  main.rs
